# google-api-client

./: .env  CMakeLists.txt  README  _ci.sh
scripts/: 0.json  1.php  2.php  3.php  5.sh
src/: MyOauth2Client.cpp
test/: CMakeLists.txt  myclient_test.cpp
thirdparty-externals/: .gitignore
thirdparty-externals/devel-packages/: .gitignore  INSTALL
thirdparty-externals/tools/: .gitignore  INSTALL
